# bflc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bf.cpp  main.cpp
.github/workflows/: build.yml
back/: amd64.c  amd64.h  amd64_asm.c  amd64_asm.h  bfir.c  bfir.h
bflc/: args.c  args.h  bytebuffer.c  bytebuffer.h  codegen.c  codegen.h  context.c  context.h  driver.c  driver.h  error.c  error.h  ir.c  ir.h  labelstack.c  main.c  units.c  units.h
bflc/back/: x86_64.c  x86_64.h
bflc/front/: brainfuck.c  brainfuck.h
bflc/mid/: folding.c  folding.h  peephole.h  validation.c  validation.h
docs/: README.md  jit_example.c
front/: bfir.c  bfir.h  brainfuck.c  brainfuck.h  fuckbees.c  fuckbees.h
jit/: example.c
lib/: back.h  bfir.c  buffer.h  error.h  front.h  label.c  label.h  middle.h  out.h  sign.h
libbflc/: bytebuffer.c  bytebuffer.h  codegen.c  codegen.h  context.c  context.h  error.c  error.h  ir.c  ir.h  labelstack.c  labelstack.h  mem.c  mem.h  reloc.c  reloc.h
libbflc/back/: x86_64.c  x86_64.h
libbflc/front/: brainfuck.c  brainfuck.h  fuckbees.c  fuckbees.h
libbflc/mid/: folding.c  folding.h  validation.c  validation.h
middle/: valid.c  valid.h
src/: amd64.c  amd64.h  amd64_asm.c  amd64_asm.h  back.h  bfir.c  bfir.h  brainfuck.c  brainfuck.h  buffer.c  compiler.cpp  compiler.h  drive.c  drive.h  front.h  in.c  in.h  label.c  label.h  main.c  main.cpp  out.c  out.h  x86_64_asm.c  x86_64_asm.h
test/: test.bfir
tests/: color.bf  helloworld.bf  name.bf
